GenerateRequest -> PoofRequest
